--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,61 +1,1 @@
-!!! 5
--# NOT LOGGED IN LAYOUT
-- title = "HAI #{Site.name.upcase} Workshops"
-%html
-  %head
-    %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
-    %title= title
-    %link{:href => "/favicon-#{Site.name}.ico", :rel => "shortcut icon"}
-    = csrf_meta_tag
-    = stylesheet_link_tag 'application'
-    = javascript_include_tag 'application'
-    :css
-      #container {
-        max-width: 600px;
-        margin: 0 auto;
-      }
-
-    - if Site.de?
-      :css
-        .header {
-          text-align: center;
-          background-color: #9c3;
-          height: 80px;
-          padding-top: 15px;
-          margin-bottom: 30px;
-        }
-        .logo {
-          position: absolute;
-          height: 115px;
-        }
-    - elsif Site.uk?
-      :css
-        .header {
-          text-align: center;
-          margin-top: -80px;
-          color: #ff8c00;
-          height: 100px;
-        }
-        .logo {
-          text-align: center;
-          z-index: -10;
-          height: 100px;
-        }
-
-  %body{class: page_class}
-    .header
-      %h1= title
-
-    #container
-      .row
-        .span12
-          .flashes
-            - flash.each do |key, msg|
-              .alert.alert-message.fade.in{title: key.to_s.humanize, class: "#{key}", data: { alert: 'alert'}}
-                = link_to("&times;".html_safe, '#', data: {dismiss: 'alert'}, class: 'close')
-                %strong= msg
-      .row
-        .span12
-          .panel
-            .panel-body
-              = yield
+= render 'layouts/layout'
