--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,14 +1,18 @@
-<h2>Change your password</h2>
+<div class="devise panel center-block">
+  <div class="panel-body">
+    <h2>Change your password</h2>
 
-<%= vertical_form(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
+    <%= vertical_form(resource, :as => resource_name, :url => password_path(resource_name), :html => {:method => :put}) do |f| %>
+      <%= f.error_notification %>
 
-  <%= f.input :reset_password_token, :as => :hidden %>
-  <%= f.full_error :reset_password_token %>
+      <%= f.input :reset_password_token, :as => :hidden %>
+      <%= f.full_error :reset_password_token %>
 
-  <%= f.input :password, :label => "New password", :required => true, :autofocus => true %>
-  <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
-  <%= f.button :submit, "Change my password" %>
-<% end %>
+      <%= f.input :password, :label => "New password", :required => true, :autofocus => true %>
+      <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
+      <%= f.button :submit, "Change my password" %>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
