--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,10 +1,14 @@
-<h2>Forgot your password?</h2>
+<div class="devise panel center-block">
+  <div class="panel-body">
+    <h2>Forgot your password?</h2>
 
-<%= vertical_form(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= f.error_notification %>
+    <%= vertical_form(resource, :as => resource_name, :url => password_path(resource_name), :html => {:method => :post}) do |f| %>
+      <%= f.error_notification %>
 
-  <%= f.input :email, :required => true, :autofocus => true %>
-  <%= f.button :submit, "Send me reset password instructions" %>
-<% end %>
+      <%= f.input :email, :required => true, :autofocus => true %>
+      <%= f.button :submit, "Send me reset password instructions" %>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
