--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,18 +1,22 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="devise panel center-block">
+  <div class="panel-body">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= vertical_form(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
+    <%= vertical_form(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}) do |f| %>
+      <%= f.error_notification %>
 
-  <%= f.input :email, :required => true, :autofocus => true %>
+      <%= f.input :email, :required => true, :autofocus => true %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-  <% end %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
 
-  <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-  <%= f.input :password_confirmation, :required => false %>
-  <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
-  <%= f.button :submit, "Update" %>
-<% end %>
+      <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
+      <%= f.input :password_confirmation, :required => false %>
+      <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+      <%= f.button :submit, "Update" %>
+    <% end %>
 
-<%= link_to "Back", :back %>
+    <%= link_to "Back", :back %>
+  </div>
+</div>
