--- a/app/views/office/public_signups/_approved.html.haml
+++ b/app/views/office/public_signups/_approved.html.haml
@@ -10,7 +10,7 @@
   %tbody
     - approved.each do |p|
       %tr
-        %td= link_to_show([:office, p], p.full_name)
+        %td= link_to(p.full_name, [:office, p])
         %td= p.gender
         %td= p.event_name
         %td= time_ago_in_words(p.approved_at)
