--- a/app/views/office/angel_registrations/new.html.haml
+++ b/app/views/office/angel_registrations/new.html.haml
@@ -1,5 +1,6 @@
-.panel
-  .panel-body
-    %h2 New registration for #{@angel.display_name}
+.panel.panel-default
+  .panel-heading
+    %h3 New registration for #{@angel.display_name}
 
+  .panel-body
     = render 'form'
