--- a/app/views/office/payments/edit.html.haml
+++ b/app/views/office/payments/edit.html.haml
@@ -2,7 +2,7 @@
   .panel-heading
     = controls do |c|
       - c << delete_button
-    %h3 Editing payment of #{@registration.full_name}
+    %h3 Edit payment of #{@registration.full_name}
 
   .panel-body
     = render 'form'
