--- a/app/views/users/angels/new.html.haml
+++ b/app/views/users/angels/new.html.haml
@@ -1,5 +1,7 @@
-.panel
+.panel.panel-default
+  .panel-heading
+    %h3 Welcome!
+
   .panel-body
-    %h2 Welcome!
     %p Please create a profile.
     = render 'form'
