--- a/app/views/users/dashboards/index.html.haml
+++ b/app/views/users/dashboards/index.html.haml
@@ -1,3 +1,5 @@
-.panel
+.panel.panel-default
+  .panel-heading
+    %h3 Welcome back #{current_user.full_name}
+
   .panel-body
-    %h2 Welcome back #{current_user.full_name}
