--- a/app/views/users/devise/registrations/edit.html.haml
+++ b/app/views/users/devise/registrations/edit.html.haml
@@ -1,7 +1,8 @@
-.panel
-  .panel-body
-    %h2 Changing login email or password
+.panel.panel-default
+  .panel-heading
+    %h3 Changing login email or password
 
+  .panel-body
     %p
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dolores ducimus excepturi inventore iure maxime nobis nulla qui quod reprehenderit sapiente sint sit tempora tenetur, voluptatem. Autem deserunt magni recusandae!
 
