--- a/app/views/users/registrations/index.html.haml
+++ b/app/views/users/registrations/index.html.haml
@@ -1,6 +1,6 @@
-.panel
-  .panel-body
-    %h2 Your registrations
+.panel.panel-default
+  .panel-heading
+    %h3 Your registrations
 
   .panel-body
     %p
