--- a/app/views/users/angels/show.html.haml
+++ b/app/views/users/angels/show.html.haml
@@ -1,6 +1,7 @@
-.panel
-  .panel-body
+.panel.panel-default
+  .panel-heading
     %h3 Your profile has been created
 
+  .panel-body
     %p
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dolores ducimus excepturi inventore iure maxime nobis nulla qui quod reprehenderit sapiente sint sit tempora tenetur, voluptatem. Autem deserunt magni recusandae!
