--- a/app/views/users/members/edit.html.haml
+++ b/app/views/users/members/edit.html.haml
@@ -1,6 +1,8 @@
-.panel
+.panel.panel-default
+  .panel-heading
+    %h3 Edit team signup for #{@member.team.name}
+
   .panel-body
-    %h2 Editing team signup for #{@member.team.name}
     %p
       If you can not longer be on team, then please sign off.
       = link_to 'Remove myself from team', users_team_member_path(@member.team), method: :delete, id: 'remove-link', class: 'btn btn-primary'
