--- a/app/views/office/teams/_members.html.haml
+++ b/app/views/office/teams/_members.html.haml
@@ -1,7 +1,9 @@
 .row
   .col-sm-6
-    = render 'quick_add', team: @team, gender: Registration::FEMALE
-    = render members.females
+    .team-member.list-group
+      = render 'quick_add', team: @team, gender: Registration::FEMALE
+      = render members.females
   .col-sm-6
-    = render 'quick_add', team: @team, gender: Registration::MALE
-    = render members.males
+    .team-member.list-group
+      = render 'quick_add', team: @team, gender: Registration::MALE
+      = render members.males
