--- a/app/views/office/teams/_team.html.haml
+++ b/app/views/office/teams/_team.html.haml
@@ -1,3 +1,3 @@
-= render team.stats
-= render 'notes', team: team
+= render 'counts', team: team
 = render 'members', members: team.members
+= render 'notes', team: team
