--- a/app/views/users/teams/show.html.haml
+++ b/app/views/users/teams/show.html.haml
@@ -1,6 +1,11 @@
 .panel.panel-default
   .panel-heading
-    %h3 Team
+    .pull-right
+      = render 'member_signup', team: @team
+    %h3
+      = @team.name
+      - if @team.closed?
+        %span.small Closed
 
   .panel-body
     = render @team
