--- a/app/views/office/teams/show.html.haml
+++ b/app/views/office/teams/show.html.haml
@@ -6,7 +6,7 @@
       - c << button_with_options(:refresh, path: refresh_office_team_members_path(@team), html: {method: :post})
     %h3
       = @team.event ? link_to(@team.name, [:office, @team.event]) : @team.name
-      = '(Closed)' if @team.closed?
+      %span.small= '(Closed)' if @team.closed?
 
   .panel-body
     = render @team
