heading standardized & responsive

--- a/app/views/users/not_signed_in/confirmed.html.haml
+++ b/app/views/users/not_signed_in/confirmed.html.haml
@@ -1,4 +1,7 @@
-%h2 Great, you have confirmed your email!
+.panel.panel-default
+  .panel-heading
+    %h3 Great, you have confirmed your email!
 
-%h2
-  = link_to('Sign In Here', new_session_path(:user), id: 'signin-button')
+  .panel-body
+    %h2
+      = link_to('Sign In Here', new_session_path(:user), id: 'signin-button')
