--- a/app/views/users/not_signed_in/signup_requested.html.haml
+++ b/app/views/users/not_signed_in/signup_requested.html.haml
@@ -1,5 +1,9 @@
-%h2 Thanks for signing up
-%p
-  You will receive an email shortly. Please click the link within this email to confirm your account.
-%p
-  Until you confirm your email address your account cannot be used.
+.panel.panel-default
+  .panel-heading
+    %h3 Thanks for signing up
+
+  .panel-body
+    %p
+      You will receive an email shortly. Please click the link within this email to confirm your account.
+    %p
+      Until you confirm your email address your account cannot be used.
