--- a/app/views/office/public_signups/index.html.haml
+++ b/app/views/office/public_signups/index.html.haml
@@ -4,5 +4,6 @@
       - c << new_button(path: new_public_signup_path)
     %h3= pluralize(@public_signups.flatten.size, 'Pending signup')
 
-  - @public_signups.each do |event_signups|
-    = render 'public_signups', public_signups: event_signups
+  .panel-body
+    - @public_signups.each do |event_signups|
+      = render 'public_signups', public_signups: event_signups
