--- a/app/views/office/public_signups/_public_signups.html.haml
+++ b/app/views/office/public_signups/_public_signups.html.haml
@@ -1,18 +1,22 @@
-%table.table.table-striped
-  %caption= public_signups.first.event_name
-  %thead
-    %tr
-      %th.span3 Name
-      %th.span1 Gender
-      %th.span2.center Cloth. Talk
-      %th.span2.center Reg Fee Rec
-      %th Added
+.panel.panel-default
+  .panel-heading
+    %h4= public_signups.first.event_name
 
-  %tbody
-    - public_signups.each do |p|
-      %tr
-        %td.span3= link_to(p.full_name, [:office, p])
-        %td.span1= p.gender
-        %td.span2.center= checkmark_if(p.clothing_conversation)
-        %td.span2.center= checkmark_if(p.reg_fee_received)
-        %td= time_ago_in_words(p.created_at)
+  .table-responsive
+    %table.table.table-striped
+      %thead
+        %tr
+          %th.span3 Name
+          %th.span1 Gender
+          %th.span2.center Cloth. Talk
+          %th.span2.center Reg Fee Rec
+          %th Added
+
+      %tbody
+        - public_signups.each do |p|
+          %tr
+            %td.span3= link_to(p.full_name, [:office, p])
+            %td.span1= p.gender
+            %td.span2.center= checkmark_if(p.clothing_conversation)
+            %td.span2.center= checkmark_if(p.reg_fee_received)
+            %td= time_ago_in_words(p.created_at)
