--- a/app/assets/stylesheets/uk/colour.css
+++ b/app/assets/stylesheets/uk/colour.css
@@ -78,7 +78,7 @@ h1, #column2 h1
   color: #CE7014;
 } 
 
-input, textarea, select
+input, textarea, select, input[type="submit"]
 { background: #FFFFFF;
   color: #70695A;
   border-color: #CAAE90;
