avoid nav items appearing on next line

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -183,6 +183,10 @@ caption {
   white-space: nowrap;
 }
 
+.navbar-header {
+  width: 100%;
+}
+
 .navbar-nav {
   // Uncollapse the nav always
   float: left;
