can't have sort_link without a search form.

--- a/app/views/office/public_signups/_approved.html.haml
+++ b/app/views/office/public_signups/_approved.html.haml
@@ -5,7 +5,7 @@
         %th Name
         %th Gender
         %th Event
-        %th= sort_link @q, :approved_at, 'Approved'
+        %th Approved
 
     %tbody
       - approved.each do |p|
