--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -222,3 +222,13 @@ caption {
 .devise {
   width: 300px;
 }
+
+.messages {
+  .header, .footer {
+      background-color: #FFD;
+      border: 1px solid #E4E4E4;
+      padding-left: 10px;
+      padding-right: 10px;
+      margin-bottom: 5px;
+  }
+}
