add upcoming direct debt email to event

--- a/app/views/office/events/_form.html.haml
+++ b/app/views/office/events/_form.html.haml
@@ -9,4 +9,5 @@
   = input_for_event_email(f, EventEmail::SIGNUP)
   = input_for_event_email(f, EventEmail::PENDING)
   = input_for_event_email(f, EventEmail::APPROVED)
+  = input_for_event_email(f, EventEmail::UPCOMING_DIRECT_DEBIT)
   = f.button :submit
